mdapi/unpackaged/objects/Bank_Product__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Code__c</fullName>
        <externalId>true</externalId>
        <label>Bank Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                    <label>Commercial</label>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Trading</fullName>
                    <label>Credit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Minimum_Deposit__c</fullName>
        <label>Minimum Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Online_Application__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Online Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promotion_Type__c</fullName>
        <label>Promotion Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Flyer</fullName>
                </value>
                <value>
                    <fullName>Local Branch</fullName>
                </value>
                <value>
                    <fullName>VIP Select</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bank Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>